@@ -143,7 +143,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="label245">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">_City:</property>
+		      <property name="label" translatable="yes">C_ity:</property>
 		      <property name="use_underline">True</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_CENTER</property>
